     would focus on preparing communications, and `upsdrv_initinfo()` would
     actually talk to the device and set initial critical data values. [#1962]

 - `apcupsd-ups` driver updates:
   * Abandoned use of obsolete `gethostbyname()` in favour of `getaddrinfo()`.
     Extended to be IPv6-capable along the way. [#1209]

 - `nutdrv_qx` driver updates:
   * Define an internal `QX_FLAG_MAPPING_HANDLED` to check if the subdriver
     code (mapping table) and the data found from device walk sit together
     well -- namely, that we successfully use reasonably many of the existing
     mappings. Suggest how user can help improve the driver if too few data
     points were seen. [PR #3095]
   * New `nutdrv_qx_innovatae` adds support for Ippon INNOVA TAE series which
     are similar to Q1 except in reporting of nominal `voltage`, `current`,
     `frequency` data (that along with `battery_voltage_reports_one_pack` and
     `override.battery.packs=12` settings yields reasonable `battery.voltage.*`
     data points). [issue #3137, PR #3139]
   * `nutdrv_qx_masterguard` sub-driver adds a way to call battery test until
     the battery charge is low, using a new `test.battery.start.low` instant
     command name (registered in `docs/nut-names.txt`). The difference between
     the "battery test until battery low" and "deep battery test" is that the
     latter is actually a battery calibration test and needs some preconditions
     to be met, i.e. the load must be between 30% and 100% and the starting
     battery capacity is greater than 99%. The "Battery test until battery low"
     can be started anytime. Tested on Masterguard A1000 and A2000 units. [#3135]
   * `nutdrv_qx_masterguard` sub-driver fix `masterguard_add_slaveaddr` to
     return the correct command length, resolving a bug for all commands using
     the `,XX` slave address placeholder. This also enables support for the
     `test.battery.start.deep` (`TUD`) command. [#3141]
